Once again trying to fix spacing issues with entries.

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,12 @@ section h2 {
   margin-bottom: 0;
 }
 
+h3 {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
 /* Body sizing */
 p {
   font-size: 20px;
